tests/parser/tests/cases/should_fail/malformed_function_type/case.hash
let str_eq: (str, str) > str;
