tests/parser/tests/cases/should_fail/malformed_function_type/case.stderr
error: unexpectedly encountered a `>`
 --> $DIR/case.hash:1:20
1 |   str_eq: (str, str) > str;
  |                      ^ here
  = help: consider adding a `;`
